# cavaticus

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  DEBUGGING_NOTES.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICK_REFERENCE.md  README.md  dev.sh  list_openrouter_models.py  package.json  pnpm-lock.yaml  railway.toml  splendid-watching-emerson.md  tsconfig.base.json  turbo.json
apps/agent/: .gitignore  Dockerfile  conftest.py  pyproject.toml
apps/agent/src/: main.py  models.py
apps/agent/src/providers/: claude.py  clawspring_providers.py  gemini.py  openai.py  openrouter.py  shared.py  unified.py
apps/agent/src/routers/: agent.py  providers.py
apps/agent/src/tools/: __init__.py  analysis.py  context.py  dispatch.py  filesystem.py  memory.py  registry.py  sandbox.py  search.py  shell.py  skills.py  tasks.py  web.py
apps/agent/tests/: test_dispatch.py  test_providers.py  test_registry.py  test_shared.py
apps/api/: drizzle.config.ts  package.json  vitest.config.ts
apps/api/src/: index.ts
apps/api/src/__tests__/: middleware.test.ts  utils.test.ts
apps/api/src/db/: index.ts  schema.ts  seed.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: auth.ts  blocks.ts  chat.ts  export.ts  files.ts  github.ts  memories.ts  models.ts  projects.ts  settings.ts  tasks.ts  templates.ts
apps/api/src/services/: agent.ts  crypto.ts  github.ts
apps/api/src/types/: session.d.ts
apps/api/src/ws/: handler.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.css  main.tsx  router.ts
scripts/: railway-setup.sh
(+29 files in other folders)
